--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.28.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
