--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.0.0",
     "email-validator": "^2.0.4",
     "html2pdf.js": "^0.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-pdf-tailwind": "^2.3.0",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
