--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-pdf": "^9.1.1",
     "react-pdf-tailwind": "^2.3.0",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
